--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a>
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Committies</a>
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Accomodation</a>
-								<li class="nav-item"><a class="nav-link" href="speakers.html">Schedule</a>
+								<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a>
 									<!-- <li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
 									<ul class="dropdown-menu">
@@ -61,7 +61,7 @@
 								<!-- <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
-								<li class="nav-item"><a href="#" class="tickets_btn">Contact</a></li>
+								<li class="nav-item"><a href="./contact.html" class="tickets_btn">Contact</a></li>
 							</ul>
 						</div> 
 					</div>
