--- a/contact.html
+++ b/contact.html
@@ -129,66 +129,72 @@
         </section>
         <!--================Contact Area =================-->
         
-        <!--================ start footer Area  =================-->	
-        <footer class="footer-area p_120">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3  col-md-6 col-sm-6">
-                        <div class="single-footer-widget tp_widgets">
-                           <h6 class="footer_title">Top Products</h6>
-                            <ul class="list">
-                            	<li><a href="#">Managed Website</a></li>
-                            	<li><a href="#">Manage Reputation</a></li>
-                            	<li><a href="#">Power Tools</a></li>
-                            	<li><a href="#">Marketing Service</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-5 col-md-6 col-sm-6">
-                        <div class="single-footer-widget news_widgets">
-                            <h6 class="footer_title">Newsletter</h6>
-                            <p>You can trust us. we only send promo offers, not a single spam.</p>		
-                            <div id="mc_embed_signup">
-                                <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative">
-                                    <div class="input-group d-flex flex-row">
-                                        <input name="EMAIL" placeholder="Your email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-                                        <button class="btn sub-btn">Subscribe</button>		
-                                    </div>									
-                                    <div class="mt-10 info"></div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6 offset-lg-1">
-                        <div class="single-footer-widget instafeed">
-                            <h6 class="footer_title">Instagram Feed</h6>
-                            <ul class="list instafeed d-flex flex-wrap">
-                                <li><img src="img/instagram/Image-01.jpg" alt=""></li>
-                                <li><img src="img/instagram/Image-02.jpg" alt=""></li>
-                                <li><img src="img/instagram/Image-03.jpg" alt=""></li>
-                                <li><img src="img/instagram/Image-04.jpg" alt=""></li>
-                                <li><img src="img/instagram/Image-05.jpg" alt=""></li>
-                                <li><img src="img/instagram/Image-06.jpg" alt=""></li>
-                                <li><img src="img/instagram/Image-07.jpg" alt=""></li>
-                                <li><img src="img/instagram/Image-08.jpg" alt=""></li>
-                            </ul>
-                        </div>
-                    </div>	
-                </div>
-                <div class="row footer-bottom d-flex justify-content-between align-items-center">
-                    <p class="col-lg-8 col-md-8 footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                    <div class="col-lg-4 col-md-4 footer-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                    </div>
-                </div>
-            </div>
-        </footer>
-		<!--================ End footer Area  =================-->
+        <!--================ start footer Area  =================-->
+	<footer class="footer-area p_120">
+		<div class="container">
+			<div class="row" style="text-align: center; margin:auto;">
+				<div class="col-lg-1 col-md-2 col-sm-2"></div>
+				<div class="col-lg-3  col-md-6 col-sm-6">
+					<div class="single-footer-widget tp_widgets">
+						<h6 class="footer_title">Contact Us</h6>
+						Vasavi College of Engineering<br />
+						<em><small> (Private Un-aided Non-minority
+								Autonomous Institution)<br /></small></em>
+						Affiliated to Osmania University, Hyderabad <br />
+						Approved by AICTE, New Delhi<br />
+						9-5-81, Ibrahimbagh<br />
+						Hyderabad - 500 031<br />
+						Telangana, India<br /><br />
+
+						Tel: +91 40 23146003<br />
+						Fax: +91 40 23146090<br /> <br />
+
+						<!-- <a
+							   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
+								   class="__cf_email__"
+								   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
+						Email: <a href="http://vce.ac.in">www.vce.ac.in</a>
+					</div>
+				</div>
+
+				<div class="col-lg-2"></div>				
+
+				<div class="col-lg-5 col-md-6 col-sm-6">
+					<div class="single-footer-widget news_widgets">
+						<h6 class="footer_title">Leave a Reply</h6>
+						<p>Your email address will not be published. </p>
+						<div id="mc_embed_signup">
+							<form id="feedback" action="#" onsubmit="submitFeedback()" class="subscribe_form relative">
+								<div class="input-group d-flex flex-row">
+									<input type="text" id="comment" name="COMMENT" placeholder="Write a comment"
+										cols="45" rows="4" maxlength="65525" required></textarea><br>
+									<input id="name" name="NAME" placeholder="Your name" onfocus="this.placeholder = ''"
+										onblur="this.placeholder = 'Name'" required><br>
+									<input id="email" name="EMAIL" placeholder="Your email address"
+										onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '"
+										required type="email"><br><br>
+									<input type="submit" class="btn sub-btn" style="position: static;"
+										value="Post Comment">
+								</div>
+								<div class="mt-10 info"></div>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-1"></div>
+			</div>
+			<div class="row footer-bottom d-flex justify-content-between align-items-center">
+				<p class="col-lg-8 col-md-8 footer-text m-0">
+					Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
+					Rights Reserved.</p>
+				<div class="col-lg-4 col-md-4 footer-social">
+					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!--================ End footer Area  =================-->
+
         
         <!--================Contact Success and Error message Area =================-->
         <div id="success" class="modal modal-message fade" role="dialog">
