clean up and content update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container box_1620">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					
+					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
@@ -99,7 +100,7 @@
 					<h2>Conference Title</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
 						labore et dolore magna aliqua.</p>
-					<a class="banner_btn" href="#">View More Details</a>
+					<a class="banner_btn" href="details.html">View More Details</a>
 				</div>
 			</div>
 		</div>
@@ -163,7 +164,7 @@
 							on the job is beyond reproach. inappropriate behavior is often laughed.</p>
 						<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
 							standards especially in the workplace.</p>
-						<a class="main_btn" href="#">View More Details</a>
+						<a class="main_btn" href="details.html">View More Details</a>
 					</div>
 				</div>
 			</div>
@@ -447,8 +448,8 @@
 	</section>
 	<!--================End Event Map Area =================-->
 
-	<!--================Price Area =================-->
-	<section class="price_area p_120">
+	<!-- ================Price Area =================-->
+	<!-- <section class="price_area p_120">
 		<div class="container">
 			<div class="main_title">
 				<h2>Ticket Pricing</h2>
@@ -526,8 +527,8 @@
 				</div>
 			</div>
 		</div>
-	</section>
-	<!--================End Price Area =================-->
+	</section> -->
+	<!--================End Price Area ================= -->
 
 	<!--================ start footer Area  =================-->
 	<footer class="footer-area p_120">
