--- a/details.html
+++ b/details.html
@@ -4,8 +4,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Eventure Multi</title>
+        <link rel="icon" href="img/logo.png" type="image/png">
+        <title>Details</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -42,7 +42,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+						<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -77,9 +77,9 @@
 					<div class="banner_content text-center">
 						<div class="page_link">
 							<a href="index.html">Home</a>
-							<a href="about-us.html">About</a>
+							<a href="details.html">Details</a>
 						</div>
-						<h2>About Event</h2>
+						<h2>Details</h2>
 					</div>
 				</div>
             </div>
@@ -128,18 +128,14 @@
         <!--================Welcome Area =================-->
         <section class="welcome_area pad_btm">
         	<div class="container">
-        		<div class="welcome_inner row">
-        			<div class="col-lg-5">
-        				<div class="welcome_img">
-        					<img class="img-fluid" src="img/welcome-1.jpg" alt="">
-        				</div>
-        			</div>
-        			<div class="col-lg-6 offset-lg-1">
-        				<div class="welcome_text">
-        					<h3>Welcome to Eventure</h3>
+        		<div class="welcome_inner" style="text-align: center; margin:auto;">
+        			
+        			<div class="col-lg-6 offset-lg-1" style="text-align: center; margin:auto;">
+        				<div class="welcome_text" style="text-align: center; margin:auto;">
+        					<h3>Welcome</h3>
         					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
         					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace.</p>
-        					<a class="main_btn" href="#">View More Details</a>
+        					
         				</div>
         			</div>
         		</div>
