--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/logo.png" type="image/png">
-        <title>Eventure Multi</title>
+        <title>About Us</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -136,7 +136,7 @@
         			</div>
         			<div class="col-lg-6 offset-lg-1">
         				<div class="welcome_text">
-        					<h3>Welcome to Eventure</h3>
+        					<h3>Welcome</h3>
         					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
         					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace.</p>
         					<a class="main_btn" href="#">View More Details</a>
