--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="css/snackbar.css">
 	<style>
 		.iframe-container {
 			overflow: hidden;
@@ -34,7 +35,7 @@
 			width: 100%;
 		}
 	</style>
-	<link rel="stylesheet" href="css/snackbar.css">
+	
 </head>
 
 <body>
@@ -465,7 +466,7 @@
 						<h6 class="footer_title">Leave a Reply</h6>
 						<p>Your email address will not be published. </p>
 						<div id="mc_embed_signup">
-							<form id="feedback" action="#" onsubmit="submitFeedback()" class="subscribe_form relative">
+							<form id="feedback" action="#" class="subscribe_form relative">
 								<div class="input-group d-flex flex-row">
 									<input type="text" id="comment" name="COMMENT" placeholder="Write a comment"
 										cols="45" rows="4" maxlength="65525" required></textarea><br>
@@ -474,7 +475,7 @@
 									<input id="email" name="EMAIL" placeholder="Your email address"
 										onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '"
 										required type="email"><br><br>
-									<input type="submit" id="commentBtn" class="btn sub-btn" style="position: static;" value="Post Comment">
+									<input type="button" onclick="submitFeedback()" id="commentBtn" class="btn sub-btn" style="position: static;" value="Post Comment">
 								</div>
 								
 							</form>
@@ -499,31 +500,34 @@
 
 
 
-	<script>
-		function submitFeedback() {
-			comment = document.getElementById("comment").value;
-			name = document.getElementById("name").value;
-			email = document.getElementById("email").value;
-			url = "https://docs.google.com/forms/d/e/1FAIpQLSfgTfhijWCxTZsfxbpUb_nuH6Cdi6c1VqYweh2oB9CLspNy0w/formResponse?usp=pp_url&entry.62543713=" + comment + "&entry.722919610=" + name + "&entry.318867963=" + email + "&submit=Submit";
-
-			var xhttp = new XMLHttpRequest();
-			xhttp.open("GET", url, true);
-			xhttp.send();
-			return "Succefully Posted!";
-		}
-	</script>
 	<!-- Optional JavaScript -->
 	<script>
 		function submitFeedback() {
+			var x = document.getElementById("snackbar");
+			
 			comment = document.getElementById("comment").value;
 			name = document.getElementById("name").value;
 			email = document.getElementById("email").value;
 			url = "https://docs.google.com/forms/d/e/1FAIpQLSfgTfhijWCxTZsfxbpUb_nuH6Cdi6c1VqYweh2oB9CLspNy0w/formResponse?usp=pp_url&entry.62543713=" + comment + "&entry.722919610=" + name + "&entry.318867963=" + email + "&submit=Submit";
 
 			var xhttp = new XMLHttpRequest();
-			xhttp.open("GET", url, false);
+			xhttp.onreadystatechange = function() {
+				if(this.readyState==4){
+					x.className = "show";
+					document.getElementById("commentBtn").disabled = true;
+					if (this.status == 200) {
+						document.getElementById("snackbar").innerHTML = 'Message Sent Successfully';
+						setTimeout(function(){ x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false;}, 3000);
+					}
+					else{
+						document.getElementById("snackbar").innerHTML = 'Could not send message. Please try later';
+						setTimeout(function(){ x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false;}, 3000);
+					}
+				}
+			};
+			xhttp.open("GET", url, true);
 			xhttp.send();
-			return "Succefully Posted!";
+
 		}
 	</script>
 
@@ -544,7 +548,6 @@
 	<script src="vendors/counter-up/jquery.counterup.js"></script>
 	<script src="js/mail-script.js"></script>
 	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/theme.js"></script>
 </body>
