nav dropdown for about

--- a/index.html
+++ b/index.html
@@ -59,12 +59,27 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+							<li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
+									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
+								</ul>
+							</li>
 							<li class="nav-item"><a class="nav-link" href="speakers.html">Registrations</a>
 							<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a>
 							<li class="nav-item"><a class="nav-link" href="committees.html">committees </a>
 							<li class="nav-item"><a class="nav-link" href="speakers.html">Accomodation</a>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a>
+
+							<!-- <li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
+									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
+								</ul>
+							</li> -->
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./contact.html" class="tickets_btn">Contact</a></li>
